REGRESSION (Safari 16.4): "box-decoration-break: clone" with "padding-right" is missing padding space https://bugs.webkit.org/show_bug.cgi?id=255036 <rdar://problem/107668970>

Reviewed by Antti Koivisto.

Account for cloned decoration end when computing the content width for merged text runs.

* LayoutTests/fast/inline/box-decoration-clone-with-padding-end-expected.html: Added.
* LayoutTests/fast/inline/box-decoration-clone-with-padding-end.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::appendTextContent):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForLineLayout):

Canonical link: https://commits.webkit.org/262644@main